@@ -899,6 +899,10 @@ __ZN7WebCore21SerializedScriptValue6createERKN3WTF6StringE
 __ZN7WebCore21SerializedScriptValueC1ERN3WTF6VectorIhLm0ENS1_15CrashOnOverflowEEE
 __ZN7WebCore21SerializedScriptValueD1Ev
 __ZN7WebCore21URLByRemovingUserInfoEP5NSURL
+__ZN7WebCore21UserContentController13addUserScriptERNS_15DOMWrapperWorldENSt3__110unique_ptrINS_10UserScriptENS3_14default_deleteIS5_EEEE
+__ZN7WebCore21UserContentController17removeUserScriptsERNS_15DOMWrapperWorldE
+__ZN7WebCore21UserContentController6createEv
+__ZN7WebCore21UserContentControllerD1Ev
 __ZN7WebCore21UserContentURLPattern5parseERKN3WTF6StringE
 __ZN7WebCore21ViewportConfiguration15setContentsSizeERKNS_7IntSizeE
 __ZN7WebCore21ViewportConfiguration17webpageParametersEv
@@ -2193,10 +2197,6 @@ __ZN7WebCore20ResourceHandleClient23didReceiveResponseAsyncEPNS_14ResourceHandle
 __ZN7WebCore20applicationIsHRBlockEv
 __ZN7WebCore20builtInPDFPluginNameEv
 __ZN7WebCore21DeviceOrientationData6createEbdbdbdbb
-__ZN7WebCore21UserContentController13addUserScriptERNS_15DOMWrapperWorldENSt3__110unique_ptrINS_10UserScriptENS3_14default_deleteIS5_EEEE
-__ZN7WebCore21UserContentController17removeUserScriptsERNS_15DOMWrapperWorldE
-__ZN7WebCore21UserContentController6createEv
-__ZN7WebCore21UserContentControllerD1Ev
 __ZN7WebCore21applicationIsApertureEv
 __ZN7WebCore21applicationIsVersionsEv
 __ZN7WebCore21reportThreadViolationEPKcNS_20ThreadViolationRoundE
