@@ -1,3 +1,10 @@
+2014-05-18  Anders Carlsson  <andersca@apple.com>
+
+        Fix iOS build.
+
+        * WebCore.exp.in:
+        Move UserContentController symbols to the right place.
+
 2014-05-18  Jon Lee  <jonlee@apple.com>
 
         Build fix for r169006.
